Added some document "Customization"

--- a/client/src/Components/Main/MainSCSS/_navbar.scss
+++ b/client/src/Components/Main/MainSCSS/_navbar.scss
@@ -9,6 +9,11 @@
   background-color: rgb(16, 16, 16);
   height: 2.5rem;
   width: 100%;
+  #current-time {
+    color: white;
+    font-family: "bebas neue";
+    font-size: 1.2rem;
+  }
   #navbar--dir-info {
     cursor: default;
     background-color: white;
