--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_document.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_document.scss
@@ -1,44 +1,108 @@
 @import "../../Main/MainSCSS/variables.scss";
 
+@keyframes message {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 #document--body {
   background-color: #101010fe;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-bottom: 4rem;
   #document--header {
-    position: absolute;
-    height: 2rem;
-    top: 4rem;
-    width: 100%;
+    position: relative;
+    height: 4rem;
+    top: 1.5rem;
+    z-index: 5;
     padding: 5px;
-    z-index: 1;
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
+    margin-bottom: 1rem;
+    width: 100%;
+    @include flexStyle(row);
+    button {
+      padding: 5px;
+      border: none;
+      margin-inline: 5px;
+      font-family: "roboto slab";
+      letter-spacing: 1px;
+      position: relative;
+      cursor: pointer;
+      color: black;
+      height: 100%;
+      background-color: white;
+      &:hover {
+        background-color: #222;
+        color: white;
+        transition: all 200ms ease-in-out;
+      }
+      &:disabled {
+        cursor: not-allowed;
+        background-color: grey;
+        color: #999;
+      }
+    }
+    #font-styling-container {
+      .fonts-list {
+        background-color: #222;
+        border: 2px solid white;
+        color: white;
+        width: max-content;
+        padding-inline: 1rem;
+        position: absolute;
+        left: 0rem;
+        bottom: -20rem;
+        z-index: 1;
+        list-style: none;
+        height: 20rem;
+        overflow-y: scroll;
+        li {
+          height: 2rem;
+          border-bottom: 2px solid white;
+          cursor: pointer;
+          margin-bottom: 2px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
+      }
+    }
   }
   #document {
-    div {
-      margin: 5rem auto 1rem auto;
-      padding: 4rem 3rem;
+    margin-top: 2rem;
+    height: 90%;
+    min-height: 90vh;
+    width: auto;
+    aspect-ratio: 210/297;
+    cursor: default;
+    position: relative;
+    background-color: #222;
+    @include flexStyle(row);
+    .document-page {
+      cursor: text;
+      position: absolute;
+      width: 90%;
       height: 90%;
-      aspect-ratio: 210/297;
+      margin: auto;
       background-color: #222;
-      textarea {
+      overflow-y: auto;
+      word-wrap: break-word;
+      color: white;
+      letter-spacing: 0.3px;
+      font-family: akshar;
+      resize: none;
+      border: none;
+      outline: none;
+      &::selection {
+        background-color: #ac4df666;
         color: white;
-        letter-spacing: 0.3px;
-        font-family: akshar;
-        display: block;
-        // overflow: hidden;
-        border: none;
-        outline: none;
-        resize: none;
-        background-color: #222;
-        @include maxSize;
-        &:focus {
-          cursor: initial;
-        }
-        &::selection {
-          background-color: #ac4df666;
-          color: white;
-          cursor: pointer;
-        }
       }
     }
   }
@@ -51,6 +115,8 @@
   }
   color: black;
   position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 25;
   bottom: 3%;
   width: 35%;
@@ -59,7 +125,7 @@
   height: 15%;
   max-height: 10rem;
   @include flexStyle(row);
-  animation: 200ms forwards ease-in-out message;
+  animation: 4s forwards ease-in-out message;
   background: repeating-radial-gradient(
     $accentColor 0%,
     $accentColor 30%,
