--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -2,16 +2,16 @@
 
 #renderitem--page {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: calc((var(--screen-width) / 11.8));
-  grid-gap: 0.7%;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: calc((var(--screen-width) / 5.8));
+  grid-gap: 0.5rem;
   overflow-y: auto;
   position: absolute;
   height: 90%;
   width: 98%;
   overflow-x: hidden;
   top: 5rem;
-  padding: 0 1% 10rem 1%;
+  padding: 0 1rem 10rem 1rem;
   & > h1 {
     font-size: 3rem;
     color: #ccc;
@@ -63,36 +63,36 @@
   }
 }
 
-@media screen and (max-width: 2000px) {
-  #renderitem--page {
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 5.8));
-  }
-}
+// @media screen and (max-width: 2000px) {
+//   #renderitem--page {
+//     grid-template-columns: repeat(6, 1fr);
+//     grid-auto-rows: calc((var(--screen-width) / 5.8));
+//   }
+// }
 
-@media screen and (max-width: 1600px) {
-  #renderitem--page {
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 4.8));
-  }
-}
+// @media screen and (max-width: 1600px) {
+//   #renderitem--page {
+//     grid-template-columns: repeat(5, 1fr);
+//     grid-auto-rows: calc((var(--screen-width) / 4.8));
+//   }
+// }
 
-@media screen and (max-width: 1300px) {
-  #renderitem--page {
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 5.8));
-  }
-}
-@media screen and (max-width: 900px) {
-  #renderitem--page {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 2.8));
-  }
-}
+// @media screen and (max-width: 1300px) {
+//   #renderitem--page {
+//     grid-template-columns: repeat(6, 1fr);
+//     grid-auto-rows: calc((var(--screen-width) / 5.8));
+//   }
+// }
+// @media screen and (max-width: 900px) {
+//   #renderitem--page {
+//     grid-template-columns: repeat(3, 1fr);
+//     grid-auto-rows: calc((var(--screen-width) / 2.8));
+//   }
+// }
 
-@media screen and (max-width: 700px) {
-  #renderitem--page {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: calc(100vw / 2.8);
-  }
-}
+// @media screen and (max-width: 700px) {
+//   #renderitem--page {
+//     grid-template-columns: repeat(3, 1fr);
+//     grid-auto-rows: calc(100vw / 2.8);
+//   }
+// }
