--- a/client/src/Components/Tools/ToolsSCSS/_customtitle.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_customtitle.scss
@@ -7,8 +7,8 @@
   }
 }
 #custom-title {
-  padding: 5px;
-  font-size: 0.7rem;
+  padding: 7px 12px 7px 12px;
+  font-size: 0.8rem;
   background: #fff;
   outline: 1.5px solid black;
   border-radius: 2px;
@@ -16,5 +16,8 @@
   z-index: 1000;
   position: fixed;
   transform-origin: left;
-  animation: opacityStuff 150ms ease-in-out;
+  animation: opacityStuff 170ms ease-in-out;
+  line-height: 1.2rem;
+  text-decoration: underline 1% grey;
+  text-underline-offset: 3px;
 }
