--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -63,12 +63,12 @@
   }
 }
 
-// @media screen and (max-width: 2000px) {
-//   #renderitem--page {
-//     grid-template-columns: repeat(6, 1fr);
-//     grid-auto-rows: calc((var(--screen-width) / 5.8));
-//   }
-// }
+@media screen and (min-width: 1500px) {
+  #renderitem--page {
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 11.5));
+  }
+}
 
 // @media screen and (max-width: 1600px) {
 //   #renderitem--page {
