--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -21,44 +21,53 @@
   }
   .renderitem--block {
     position: relative;
-    @include flexStyle(column);
-    width: 100%;
-    height: 100%;
-    padding-bottom: 7%;
     border: 1px solid grey;
     &:hover {
       cursor: default;
       background-color: #222222;
       border: 1.5px solid $accentColor;
     }
-    .renderitem--play-icon {
-      width: 20%;
-      object-fit: contain;
+    .cover-block {
+      width: 100%;
+      height: 90%;
       position: absolute;
+      z-index: 1;
+      top: 0;
       cursor: pointer;
-      &:hover {
-        opacity: 0.2;
+    }
+    .block-container {
+      width: 100%;
+      height: 100%;
+      padding-bottom: 7%;
+      @include flexStyle(column);
+      .renderitem--play-icon {
+        width: 20%;
+        object-fit: contain;
+        position: absolute;
+        cursor: pointer;
+        z-index: 1;
+        opacity: 0;
       }
-    }
-    .renderitem--thumbnail {
-      object-fit: contain;
-      max-height: 80%;
-      max-width: 90%;
-      position: absolute;
-      cursor: pointer;
-    }
-    .renderitem--full-icon {
-      object-fit: contain;
-      position: absolute;
-      max-width: 80%;
-      max-height: 80%;
-      margin-bottom: 5%;
-    }
-    .custom-icon-text {
-      font-family: "bebas neue";
-      font-size: 1.3em;
-      letter-spacing: 2px;
-      text-anchor: middle;
+      .renderitem--thumbnail {
+        object-fit: contain;
+        max-height: 80%;
+        max-width: 90%;
+        position: absolute;
+        cursor: pointer;
+      }
+      .renderitem--full-icon {
+        object-fit: contain;
+        position: absolute;
+        max-width: 80%;
+        max-height: 80%;
+        margin-bottom: 5%;
+      }
+      .custom-icon-text {
+        font-family: "bebas neue";
+        font-size: 1.3em;
+        letter-spacing: 2px;
+        text-anchor: middle;
+      }
     }
   }
 }
