--- a/client/src/Components/Tools/ToolsSCSS/_fileproperties.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_fileproperties.scss
@@ -49,18 +49,20 @@
     flex-grow: 1;
     width: 90%;
   }
-  button {
+  img {
     cursor: pointer;
     color: white;
     background-color: #00000000;
     font-family: lato;
     position: absolute;
     top: 2%;
-    right: 2%;
+    right: 1.5%;
+    width: 1rem;
+    height: 1rem;
     border: none;
     &:hover {
-      transform: scale(1.2);
-      transition: 50ms ease-out transform;
+      transform: scale(1.1);
+      transition: 100ms ease-out transform;
     }
   }
 }
