--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_document.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_document.scss
@@ -72,21 +72,25 @@
     }
   }
   #document-container {
-    width: 8.5in;
-    height: 11in;
+    width: 43rem;
+    aspect-ratio: 210/297;
     position: relative;
-    #document {
-      position: absolute;
-      outline: none;
+    @include flexStyle(column);
+    overflow-y: auto;
+    p {
       width: 100%;
-      height: 100%;
-      padding: 0.5in;
-      box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+      padding-inline: 0.5in;
       background-color: #222;
       color: white;
       cursor: text;
       font-family: akshar;
-      overflow-y: auto;
+      border: none;
+      outline: none;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      &::selection {
+        background-color: rebeccapurple;
+      }
     }
   }
 }
