--- a/client/src/Components/Tools/ToolsSCSS/_fileproperties.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_fileproperties.scss
@@ -23,31 +23,28 @@
   color: white;
   z-index: 10;
   @include flexStyle(column);
-  row-gap: 3rem;
+  min-height: 30rem;
+  justify-content: space-between;
   div {
+    font-family: "akshar";
+    font-size: 1.15rem;
+    height: 2rem;
     display: flex;
     flex-direction: row;
-    width: 100%;
     position: relative;
+    width: 90%;
     p {
-      max-width: max-content;
+      font-family: "akshar";
+      font-size: 1.15rem;
     }
     #loading {
-      @include flexStyle(row);
-      height: 100%;
-      position: absolute;
+      height: 70%;
       left: 5ch;
+      width: auto;
       animation: animated_text 3s linear infinite;
       -moz-animation: animated_text 3s linear infinite;
       -webkit-animation: animated_text 3s linear infinite;
     }
-  }
-  p,
-  div {
-    font-family: "akshar";
-    font-size: 1.15rem;
-    flex-grow: 1;
-    width: 90%;
   }
   img {
     cursor: pointer;
@@ -58,7 +55,6 @@
     top: 2%;
     right: 1.5%;
     width: 1rem;
-    height: 1rem;
     border: none;
     &:hover {
       transform: scale(1.1);
