--- a/client/src/Components/Main/MainSCSS/_navbar.scss
+++ b/client/src/Components/Main/MainSCSS/_navbar.scss
@@ -26,13 +26,19 @@
     width: 100%;
     height: 1.5rem;
     scrollbar-width: none;
-    &::-webkit-scrollbar {
-      display: none;
-    }
     h1 {
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+        -ms-overflow-style: none;
+      }
       font-family: Bitter;
       font-weight: bold;
       font-size: 1.1em;
+      max-width: 80%;
+      overflow-x: scroll;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
