--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -34,6 +34,8 @@
       z-index: 1;
       top: 0;
       cursor: pointer;
+      background-color: #00000000;
+      border: none;
     }
     .block-container {
       width: 100%;
