--- a/client/src/Components/Tools/ToolsSCSS/_customtitle.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_customtitle.scss
@@ -26,4 +26,5 @@
   text-decoration: underline 10% #ffffff;
   text-decoration-style: dotted;
   text-underline-offset: 4px;
+  pointer-events: none;
 }
