--- a/client/src/Components/Main/MainSCSS/_navbar.scss
+++ b/client/src/Components/Main/MainSCSS/_navbar.scss
@@ -26,17 +26,13 @@
     width: 100%;
     height: 1.5rem;
     scrollbar-width: none;
+    overflow: hidden;
     h1 {
-      scrollbar-width: none;
-      &::-webkit-scrollbar {
-        display: none;
-        -ms-overflow-style: none;
-      }
+      overflow: hidden;
       font-family: Bitter;
       font-weight: bold;
       font-size: 1.1em;
       max-width: 80%;
-      overflow-x: scroll;
       text-overflow: ellipsis;
       white-space: nowrap;
     }
