--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -1,17 +1,16 @@
 @import "../../Main/MainSCSS/variables.scss";
 
 #renderitem--page {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: calc((var(--screen-width) / 5.8));
-  grid-gap: 0.5rem;
-  overflow-y: auto;
-  position: absolute;
-  height: 90%;
-  width: 98%;
-  overflow-x: hidden;
-  top: 5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+  height: 100vh;
+  top: 3rem;
+  align-content: flex-start;
   padding: 0 1rem 10rem 1rem;
+  overflow-y: scroll;
+  flex-grow: 1;
   & > h1 {
     font-size: 3rem;
     color: #ccc;
@@ -20,7 +19,10 @@
     text-align: center;
   }
   .renderitem--block {
+    width: 12rem;
+    aspect-ratio: 0.8;
     position: relative;
+    margin: 0.2rem;
     border: 1px solid grey;
     &:hover {
       cursor: default;
@@ -57,6 +59,18 @@
         position: absolute;
         cursor: pointer;
       }
+      @keyframes rotate {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      #loading {
+        width: 20%;
+        animation: rotate 1s ease-in-out infinite;
+      }
       .renderitem--full-icon {
         object-fit: contain;
         position: absolute;
@@ -73,37 +87,3 @@
     }
   }
 }
-
-@media screen and (min-width: 1500px) {
-  #renderitem--page {
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 11.5));
-  }
-}
-
-// @media screen and (max-width: 1600px) {
-//   #renderitem--page {
-//     grid-template-columns: repeat(5, 1fr);
-//     grid-auto-rows: calc((var(--screen-width) / 4.8));
-//   }
-// }
-
-// @media screen and (max-width: 1300px) {
-//   #renderitem--page {
-//     grid-template-columns: repeat(6, 1fr);
-//     grid-auto-rows: calc((var(--screen-width) / 5.8));
-//   }
-// }
-// @media screen and (max-width: 900px) {
-//   #renderitem--page {
-//     grid-template-columns: repeat(3, 1fr);
-//     grid-auto-rows: calc((var(--screen-width) / 2.8));
-//   }
-// }
-
-// @media screen and (max-width: 700px) {
-//   #renderitem--page {
-//     grid-template-columns: repeat(3, 1fr);
-//     grid-auto-rows: calc(100vw / 2.8);
-//   }
-// }
