--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -40,6 +40,24 @@
       border: none;
     }
     .block-container {
+      @keyframes AnimationName {
+        0% {
+          background-position: 0% 51%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 51%;
+        }
+      }
+      &.loading {
+        background: linear-gradient(90deg, #333, #777);
+        background-size: 400% 400%;
+        animation: AnimationName 4s ease infinite;
+        width: 100%;
+        height: 100%;
+      }
       width: 100%;
       height: 100%;
       padding-bottom: 7%;
@@ -59,18 +77,7 @@
         position: absolute;
         cursor: pointer;
       }
-      @keyframes rotate {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-      #loading {
-        width: 20%;
-        animation: rotate 1s ease-in-out infinite;
-      }
+
       .renderitem--full-icon {
         object-fit: contain;
         position: absolute;
