--- a/client/src/Components/Tools/ToolsSCSS/_customtitle.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_customtitle.scss
@@ -3,17 +3,21 @@
 @keyframes opacityStuff {
   0% {
     opacity: 0;
+    transform: scale(0);
+    transform-origin: top left;
   }
   100% {
+    transform: scale(1);
+    transform-origin: top left;
     opacity: 1;
   }
 }
 #custom-title {
   padding: 4px 1rem 4px 4px;
   font-size: 0.7rem;
-  background: #000000fc;
+  background: #000000cc;
   color: white;
-  outline: 1.5px solid $accentColor;
+  outline: 1px solid $accentColor;
   border-radius: 1px;
   font-family: bitter;
   font-weight: bold;
@@ -27,4 +31,8 @@
   text-decoration-style: dotted;
   text-underline-offset: 4px;
   pointer-events: none;
+  max-width: 40rem;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
