--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_directorytree.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_directorytree.scss
@@ -43,19 +43,21 @@
 }
 @keyframes rollUp {
   0% {
+    max-height: 200rem;
     transform: scaleY(1);
     transform-origin: top;
   }
   100% {
     transform: scaleY(0);
     transform-origin: top;
+    height: 0;
   }
 }
 #directorytree--body {
   z-index: 1;
-  height: calc(100vh - 2.5rem);
+  height: calc(100vh - 4rem);
   top: 1.5rem;
-  flex: 0 0 25rem;
+  flex: 0 0 30rem;
   background-color: #000;
   position: relative;
   padding: 1rem;
@@ -66,7 +68,7 @@
     position: relative;
     .opendirectory--list {
       animation: rollDown 200ms ease-in forwards;
-      &.hide {
+      &.hide-me {
         animation: rollUp 200ms ease-in forwards;
       }
     }
@@ -80,16 +82,17 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      margin-top: 5px;
+      margin-bottom: 4px;
       font-family: "roboto slab";
       border-radius: 3px;
+      letter-spacing: -0.2px;
       &:hover {
         cursor: pointer;
-        background-color: black;
+        background-color: #111;
         color: white;
-        transform: scaleX(1.01) scaleY(1.1);
-        border: 1.5px solid white;
-        transition: 200ms ease-out;
+        transform: scaleX(1.005) scaleY(1.06);
+        border: 1px solid white;
+        transition: all 100ms ease-out;
       }
       .directory--icon {
         width: 1.1em;
@@ -117,24 +120,28 @@
         margin-right: 5px;
         cursor: default;
         animation: showRotate linear 200ms forwards;
-        &.hide {
+        &.rotate-me {
           animation: hideRotate linear 200ms forwards;
         }
       }
     }
     .tree--open-directory {
-      background-color: #888;
-      color: black;
+      background-color: #111;
+      color: white;
       font-size: 1.1rem;
-      font-weight: bold;
-      letter-spacing: -0.2px;
+      &:hover {
+        background-color: #444;
+      }
     }
     #highlight--child {
       background-color: $accentColor;
       color: #000;
+      font-weight: bold;
     }
     #tree--in-path {
-      background-color: darken($accentColor, 50%);
+      background-color: darken($accentColor, 60%);
+      color: white;
+      font-weight: normal;
       &:hover {
         color: #000;
         background-color: $accentColor;
