--- a/client/src/Components/Main/MainSCSS/_navbar.scss
+++ b/client/src/Components/Main/MainSCSS/_navbar.scss
@@ -6,7 +6,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
-  background-color: rgb(16, 16, 16);
+  background-color: #151515;
   height: 2.5rem;
   width: 100%;
   #current-time {
