--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -5,10 +5,10 @@
   flex-direction: row;
   flex-wrap: wrap;
   position: relative;
-  height: calc(100vh - 4rem);
+  height: calc(100vh - 5.5rem);
   top: 1.5rem;
   align-content: flex-start;
-  padding: 1.5rem 1rem 10rem 1rem;
+  padding: 1.5rem 1rem 20rem 1rem;
   overflow-y: scroll;
   flex-grow: 1;
   & > h1 {
@@ -22,22 +22,23 @@
     width: 10rem;
     aspect-ratio: 0.8;
     position: relative;
-    margin: 0.2rem;
-    border: 1px solid grey;
+    margin: 0.3rem;
     &:hover {
       cursor: default;
       background-color: #222222;
-      border: 1.5px solid $accentColor;
+      outline: 1px solid grey;
     }
     .cover-block {
       width: 100%;
-      height: 90%;
+      height: 100%;
+      border: none;
       position: absolute;
       z-index: 1;
       top: 0;
-      cursor: pointer;
       background-color: #00000000;
-      border: none;
+      &:focus {
+        outline: 1px solid grey;
+      }
     }
     .block-container {
       @keyframes AnimationName {
@@ -66,7 +67,6 @@
         width: 20%;
         object-fit: contain;
         position: absolute;
-        cursor: pointer;
         z-index: 1;
         opacity: 0;
       }
