--- a/client/src/Components/Tools/ToolsSCSS/_contextmenu.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_contextmenu.scss
@@ -1,26 +1,44 @@
 @import "../../Main/MainSCSS/variables";
 
 #menu {
-  background-color: #fff;
   position: absolute;
   z-index: 50;
   display: flex;
   flex-direction: column;
-  button {
-    width: 15rem;
-    height: 3rem;
+  cursor: default;
+  .context-menu-item {
+    width: 12rem;
+    height: 2rem;
     border: none;
     font-family: "bebas neue";
-    font-size: 1.7rem;
+    font-size: 1.2rem;
+    position: relative;
     background-color: #222;
     color: white;
-    border-top: 0.75px solid white;
-    border-bottom: 0.75px solid white;
-    border-inline: 1.5px solid white;
+    outline: 1px solid white;
     &:hover {
       cursor: pointer;
-      color: $accentColor;
       background-color: #444;
+      font-size: 1.3rem;
+    }
+    #sub-menu {
+      width: 8rem;
+      height: 8rem;
+      background-color: #222;
+      outline: 1px solid white;
+      position: absolute;
+      right: -8rem;
+      top: 0;
+    }
+    img {
+      position: absolute;
+      right: 0;
+      top: 20%;
+      height: 60%;
+      opacity: 0.8;
+      &:hover {
+        opacity: 1;
+      }
     }
   }
 }
