--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -18,6 +18,11 @@
     width: 100vw;
     text-align: center;
   }
+  #highlight--box {
+    position: fixed;
+    background-color: #6666cc55;
+    z-index: 1;
+  }
   .renderitem--block {
     width: 10rem;
     aspect-ratio: 0.8;
@@ -69,6 +74,7 @@
         position: absolute;
         z-index: 1;
         opacity: 0;
+        cursor: pointer;
       }
       .renderitem--thumbnail {
         object-fit: contain;
