--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -28,6 +28,7 @@
     aspect-ratio: 0.8;
     position: relative;
     margin: 0.3rem;
+    border-radius: 2px;
     &:hover {
       cursor: default;
       background-color: #222222;
