--- a/client/src/Components/Tools/ToolsSCSS/_customtitle.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_customtitle.scss
@@ -15,9 +15,7 @@
 #custom-title {
   padding: 4px 1rem 4px 4px;
   font-size: 0.7rem;
-  background: #000000cc;
   color: white;
-  outline: 1px solid $accentColor;
   border-radius: 1px;
   font-family: bitter;
   font-weight: bold;
@@ -35,4 +33,15 @@
   word-wrap: break-word;
   white-space: pre-wrap;
   word-break: break-word;
+  outline: 2px solid white;
+  #title-background {
+    position: absolute;
+    z-index: -1;
+    background-color: #222222ee;
+    filter: blur(2px);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0%;
+  }
 }
