--- a/client/src/Components/Main/MainSCSS/_general.scss
+++ b/client/src/Components/Main/MainSCSS/_general.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 *,
 *::before,
 *::after {
@@ -48,6 +50,18 @@ body {
   --screen-height: 100vh;
 }
 
-.dragging {
-  cursor: grabbing !important;
+#drag-count {
+  opacity: 1 !important;
+  right: calc(50% - 0.75rem);
+  position: absolute;
+  top: -1.5rem;
+  height: 1.5rem;
+  @include flexStyle(row);
+  aspect-ratio: 1;
+  padding: 5px;
+  padding-top: 8px;
+  border-radius: 5px;
+  font-family: "bebas neue";
+  background-color: #fff;
+  font-size: 1.2rem;
 }
