--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -19,7 +19,7 @@
     text-align: center;
   }
   #highlight--box {
-    position: fixed;
+    position: absolute;
     background-color: #6666cc55;
     z-index: 1;
   }
