--- a/client/src/Components/Main/MainSCSS/_navbar.scss
+++ b/client/src/Components/Main/MainSCSS/_navbar.scss
@@ -29,8 +29,7 @@
     overflow: hidden;
     h1 {
       overflow: hidden;
-      font-family: Bitter;
-      font-weight: bold;
+      font-family: "pt serif";
       font-size: 1.1em;
       max-width: 80%;
       text-overflow: ellipsis;
