--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_displaypage.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_displaypage.scss
@@ -98,3 +98,17 @@
     }
   }
 }
+
+#items-selected-count {
+  position: fixed;
+  bottom: 0;
+  right: 1rem;
+  background-color: #fff;
+  padding: 5px;
+  opacity: 0.7;
+  font-family: "pt serif";
+  border-top-left-radius: 4px;
+  &:hover {
+    opacity: 0.3;
+  }
+}
