--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_displaypage.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_displaypage.scss
@@ -62,6 +62,20 @@
         width: 100%;
         height: 100%;
       }
+      #drive-available-space {
+        position: absolute;
+        bottom: 12.5%;
+        width: 80%;
+        height: 5%;
+        background-color: green;
+        z-index: 10;
+        div {
+          background-color: white;
+          height: 100%;
+          position: absolute;
+          right: 0;
+        }
+      }
       width: 100%;
       height: 100%;
       padding-bottom: 7%;
