--- a/client/src/Components/Tools/ToolsSCSS/_popup.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_popup.scss
@@ -7,7 +7,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 10000;
+  backdrop-filter: blur(3px);
   @include flexStyle(row);
   .context-menu-item {
     background-color: none;
