--- a/client/src/Components/Tools/ToolsSCSS/_settings.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_settings.scss
@@ -6,4 +6,60 @@
   position: fixed;
   top: 0;
   z-index: 10;
+  #settings-body {
+    width: 50rem;
+    border-radius: 0.7rem;
+    height: 40rem;
+    background-color: #ccc;
+    top: 50vh;
+    left: 50vw;
+    transform: translateY(-50%) translateX(-50%);
+    position: absolute;
+    h1 {
+      position: absolute;
+      left: 0.5rem;
+      top: 0.5rem;
+    }
+    img {
+      cursor: pointer;
+      position: absolute;
+      top: 0.5rem;
+      right: 0.5rem;
+      width: 1rem;
+    }
+    #reset-settings {
+      width: 100%;
+      height: 95%;
+      background-color: #333;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding-left: 3%;
+      padding-top: 3%;
+      display: flex;
+      flex-direction: column;
+      h2 {
+        font-family: "bebas neue";
+        font-size: 2rem;
+        left: 5px;
+        position: relative;
+        color: white;
+        div {
+          position: absolute;
+          height: 2px;
+          width: 95%;
+          background-color: #fff;
+        }
+      }
+      button {
+        cursor: pointer;
+        font-family: "pt serif";
+        width: 8rem;
+        position: relative;
+        top: 1rem;
+        margin-top: 1rem;
+        left: 0.5rem;
+      }
+    }
+  }
 }
