split navbar navigation into two parts updated the design a bit

--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_directorytree.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_directorytree.scss
@@ -70,6 +70,7 @@
   padding-bottom: 6rem;
   overflow-y: auto;
   overflow-x: auto;
+  background-color: #000;
   .tree--expanded-chunk {
     position: relative;
     .tree--open-directory,
