--- a/client/src/Components/Main/MainSCSS/_general.scss
+++ b/client/src/Components/Main/MainSCSS/_general.scss
@@ -25,7 +25,7 @@
       90deg,
       #00000000 0%,
       #00000000 30%,
-      #aaa 50%,
+      #fff 50%,
       #00000000 70%,
       #00000000 100%
     );
@@ -47,7 +47,9 @@ body {
   user-select: none;
   position: relative;
 }
-
+button {
+  outline: none;
+}
 :root {
   --screen-width: 100vw;
   --screen-height: 100vh;
