--- a/client/src/Components/Main/MainSCSS/_navbar.scss
+++ b/client/src/Components/Main/MainSCSS/_navbar.scss
@@ -16,7 +16,6 @@
   }
   #navbar--dir-info {
     cursor: default;
-    background-color: white;
     position: absolute;
     top: 2.5rem;
     @include flexStyle(row);
@@ -27,6 +26,39 @@
     height: 1.5rem;
     scrollbar-width: none;
     overflow: hidden;
+    color: white;
+    background-color: #0f0f0f;
+    #text-navigation-container {
+      height: 100%;
+      @include flexStyle(row);
+      position: relative;
+      button {
+        background-color: #00000000;
+        color: white;
+        border: none;
+        margin-inline: 1px;
+        height: 100%;
+        padding-inline: 1px;
+        font-family: "pt serif";
+        &:hover {
+          background-color: #333;
+        }
+      }
+      #arrow-and-child-directories {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        &:hover {
+          background-color: #333;
+        }
+        img {
+          margin-top: 3px;
+          height: 40%;
+        }
+      }
+    }
     h1 {
       overflow: hidden;
       font-family: "pt serif";
@@ -34,6 +66,8 @@
       max-width: 80%;
       text-overflow: ellipsis;
       white-space: nowrap;
+      position: absolute;
+      right: 0.5rem;
     }
   }
 }
