--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_displaypage.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_displaypage.scss
@@ -1,5 +1,17 @@
 @import "../../Main/MainSCSS/variables.scss";
 
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 51%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 51%;
+  }
+}
+
 #renderitem--page {
   display: flex;
   flex-direction: row;
@@ -44,17 +56,10 @@
       background-color: #00000000;
     }
     .block-container {
-      @keyframes AnimationName {
-        0% {
-          background-position: 0% 51%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0% 51%;
-        }
-      }
+      width: 100%;
+      height: 100%;
+      padding-bottom: 7%;
+      @include flexStyle(column);
       &.loading {
         background: linear-gradient(90deg, #333, #777);
         background-size: 400% 400%;
@@ -64,9 +69,9 @@
       }
       #drive-available-space {
         position: absolute;
-        bottom: 12.5%;
+        bottom: 20%;
         width: 80%;
-        height: 5%;
+        height: 8%;
         background-color: green;
         z-index: 10;
         div {
@@ -76,10 +81,14 @@
           right: 0;
         }
       }
-      width: 100%;
-      height: 100%;
-      padding-bottom: 7%;
-      @include flexStyle(column);
+      p {
+        z-index: 1;
+        bottom: 10%;
+        position: absolute;
+        font-family: akshar;
+        color: white;
+        font-size: 0.7rem;
+      }
       .renderitem--play-icon {
         width: 20%;
         object-fit: contain;
@@ -102,6 +111,10 @@
         max-width: 80%;
         max-height: 80%;
         margin-bottom: 5%;
+        &.drive-icon {
+          height: 70%;
+          top: 0;
+        }
       }
       .custom-icon-text {
         font-family: "bebas neue";
