--- a/src/Styles/_general.scss
+++ b/src/Styles/_general.scss
@@ -14,3 +14,15 @@ body {
 *::selection {
   background-color: rebeccapurple;
 }
+
+// font-family: "Bebas Neue";
+// font-family: "Roboto Slab";
+// font-family: "PT Serif";
+// font-family: "Bitter";
+// font-family: "Lato";
+// font-family: "Akshar";
+// font-family: "Jakarta";
+// font-family: "Roboto Flex";
+// font-family: "Oswald";
+// font-family: "Merriweather";
+// font-family: "Mukta";
