--- a/src/Styles/_page.scss
+++ b/src/Styles/_page.scss
@@ -1,15 +1,3 @@
-@keyframes AnimationName {
-  0% {
-    background-position: 0% 51%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 51%;
-  }
-}
-
 #display-page {
   display: flex;
   flex-direction: row;
@@ -51,17 +39,8 @@
     * {
       pointer-events: none;
     }
-    &:hover {
-      background-color: grey;
-    }
-    &.loading {
-      background: linear-gradient(90deg, #333, #777);
-      background-size: 400% 400%;
-      animation: AnimationName 2s ease infinite;
-    }
+    &:hover,
     &.selected {
-      outline: 1.5px solid black;
-      border-radius: 2px;
       background-color: grey;
     }
     .block-icon {
